--- a/assets/css/public/default.css
+++ b/assets/css/public/default.css
@@ -143,7 +143,7 @@ img {
     padding: 0;
     margin: 0 auto;
     width: 100%;
-    background-color: transparent;
+    /*background-color: transparent;*/
     height: 3em;
     max-width: 1400px;
 }
@@ -559,7 +559,7 @@ overflow: auto;
 #selected_letter {
     display: inline-block;
     border: 1px solid #ccc;
-    background-color: #79A4D4;
+    background-color: ##285180;;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
@@ -580,7 +580,7 @@ overflow: auto;
     color: #333;
 }
 #letterhead a:hover {
-    background-color: #79A4D4;
+    background-color: #285180;
     color: #fff;
 }
 #letterhead input {
